# rentflow

./: .gitignore  README.md  index.html  package-lock.json  package.json  release.yml  rentflow-updater.key  rentflow-updater.key.pub  vite.config.js
.github/workflows/: release.yml
home/claude/src/: SettingsPanel.jsx
src/: ActivationScreen.jsx  App.jsx  AppContext.jsx  AssetForm.jsx  ConfirmDialog.jsx  ContractForm.jsx  DetailPanel.jsx  Modal.jsx  SearchModal.jsx  SettingsPanel.jsx  Sidebar.jsx  TenantForm.jsx  UpdateDialog.jsx  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src/views/: Assets.jsx  Contracts.jsx  Dashboard.jsx  DocsAlerts.jsx  Export.jsx  History.jsx  Kanban.jsx  Maintenance.jsx  OperationalCosts.jsx  Payments.jsx  Properties.jsx  Tenants.jsx  Trash.jsx
